--- a/bpnn/bpnn.vcxproj.filters
+++ b/bpnn/bpnn.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\src\utility.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\trainingdata.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\input.cpp">
