Add interface for network layer and derived classes.

--- a/bpnn/bpnn.vcxproj.filters
+++ b/bpnn/bpnn.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="..\examples\examples.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\errormsg.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\input.cpp">
